ACAD-722 fix up ssh permission issues with pukey authn (~kaledoscope cannot be group writable!) ugh

--- a/modules/kaleidoscope/templates/run_kal_analytics.sh.erb
+++ b/modules/kaleidoscope/templates/run_kal_analytics.sh.erb
@@ -68,7 +68,8 @@ if [ "${?}" = "0" ] ; then
     # Run the preview processol:
     ruby ${SCRIPT_DIR}/parse_logs.rb --server ${SAKAIOAE_URL} --password ${PASSWORD} \
         --remote prod-app1,prod-app2 --path /var/log/sakaioae/error.log \
-        --append --upload prod-apache1 --uploadpath /home/kaleidoscope --user kaleidoscope;
+        --append --upload prod-apache1 --uploadpath /home/kaleidoscope --user scp_internal \
+        --uploaduser kaleidoscope;
     # ruby scripts return 1 on success:
     ruby_return_code=${?};
     if [ "${ruby_return_code}" = "0" ] ; then
