--- a/modules/sis/templates/run_sis_batch.sh.erb
+++ b/modules/sis/templates/run_sis_batch.sh.erb
@@ -15,7 +15,7 @@ EMAIL_RECIPIENT="<%= scope.lookupvar('sis::batch::email_report') %>"
 
 CSV_DIR=<%= scope.lookupvar('sis::batch::csv_dir') %>
 CSV_SCHOOLS="<% scope.lookupvar('sis::batch::school_properties').keys.each do |school| -%><%= school %> <% end -%>"
-CSV_OBJECT_TYPES="<%= scope.lookupvar('sis::batch::csv_object_types').echo do |cot| -%><%= cot %> <% end -%>"
+CSV_OBJECT_TYPES="<% scope.lookupvar('sis::batch::csv_object_types').each do |cot| -%><%= cot %> <% end -%>"
 
 GLOBAL_JAVA_OPTS="${JAVA_OPTS} -Dsis.config.file=${SIS_BATCH_HOME}/sis.properties "
 
@@ -77,7 +77,7 @@ function do_batch(){
 <% scope.lookupvar('sis::batch::school_properties').keys.each do |school| -%>
 
     JAVA_OPTS=${GLOBAL_JAVA_OPTS}
-    <% scope.lookupvar('sis::batch::school_properties')[school].each do |key,val| -%>
+    <% scope.lookupvar('sis::batch::school_properties')[school]['oae_batch_params'].each do |key,val| -%>
         JAVA_OPTS="${JAVA_OPTS} -D<%= key %>=<%= val %> "
     <% end %>
 
