--- a/modules/sis/templates/run_sis_batch.sh.erb
+++ b/modules/sis/templates/run_sis_batch.sh.erb
@@ -57,28 +57,13 @@ function do_batch(){
 
     # Run the importer
     java ${java_opts} ${FILENAME_OPTS} -jar ${SIS_JAR} 2>&1 | tee -a ${OUTPUT}
-
-    if [[ "x${ERROR}" == "x" ]]; then # No errors
-        for file in $CSV_OBJECT_TYPES; do
-            CSV_FILE="${CSV_DIR}/${file}.${school}.csv"
-            if [[ -f ${CSV_FILE} ]]; then
-                echo "Removing ${CSV_FILE}" | tee -a ${OUTPUT}
-                rm -f ${CSV_FILE}
-            fi
-        done
-    else
-        if [[ -f ${CSV_FILE} && ${ARCHIVE_CSV_FILES} == 1 ]]; then
-            echo "Moving ${CSV_FILE} -> ${CSV_ARCHIVE}" | tee -a ${OUTPUT}
-            mv ${CSV_FILE} ${CSV_ARCHIVE}
-        fi
-    fi
 }
 
 <% scope.lookupvar('sis::batch::school_properties').keys.each do |school| -%>
 
     JAVA_OPTS=${GLOBAL_JAVA_OPTS}
-    <% scope.lookupvar('sis::batch::school_properties')[school]['oae_batch_params'].each do |key,val| -%>
-        JAVA_OPTS="${JAVA_OPTS} -D<%= key %>=<%= val %> "
+    <% scope.lookupvar('sis::batch::school_properties')[school]['oae_batch_params'].sort.each do |key,val| -%>
+        JAVA_OPTS="${JAVA_OPTS} -D\'<%= key %>=<%= val %>\' "
     <% end %>
 
     do_batch <%= school %> $JAVA_OPTS
