--- a/modules/sis/templates/run_sis_batch.sh.erb
+++ b/modules/sis/templates/run_sis_batch.sh.erb
@@ -30,8 +30,8 @@ OUTPUT=`mktemp`
 # 
 function do_batch(){
 
-    $school = $1
-    $java_opts = $2
+    school=$1
+    java_opts=$2
 
     # Collect the list of filenames
     FILENAME_OPTS=""
