--- a/templates/my.cnf.erb
+++ b/templates/my.cnf.erb
@@ -1,12 +1,12 @@
 # file managed by puppet
 [mysqldump]
-user = <%= scope.lookupvar('mysql::mysql_user') %>
-password = <%= scope.lookupvar('mysql::mysql_password') %>
+user = <%= scope.lookupvar('mysql::server::mysql_user') %>
+password = <%= scope.lookupvar('mysql::server::mysql_password') %>
 
 [mysql]
-user = <%= scope.lookupvar('mysql::mysql_user') %>
-password = <%= scope.lookupvar('mysql::mysql_password') %>
+user = <%= scope.lookupvar('mysql::server::mysql_user') %>
+password = <%= scope.lookupvar('mysql::server::mysql_password') %>
 
 [mysqladmin]
-user = <%= scope.lookupvar('mysql::mysql_user') %>
-password = <%= scope.lookupvar('mysql::mysql_password') %>
+user = <%= scope.lookupvar('mysql::server::mysql_user') %>
+password = <%= scope.lookupvar('mysql::server::mysql_password') %>
