--- a/templates/server.xml.erb
+++ b/templates/server.xml.erb
@@ -19,7 +19,7 @@
      define subcomponents such as "Valves" at this level.
      Documentation at /docs/config/server.html
  -->
-<Server port="8005" shutdown="<%= scope.lookupvar('tomcat6::shutdown_password') %>">
+<Server port="<%= scope.lookupvar('tomcat6::admin_port') %>" shutdown="<%= scope.lookupvar('tomcat6::shutdown_password') %>">
 
   <!--APR library loader. Documentation at /docs/apr.html -->
   <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" />
@@ -47,7 +47,7 @@
 
   <Service name="Catalina">
     <!-- maxHttpHeaderSize is 128KB -->
-    <Connector port="8080" protocol="HTTP/1.1" 
+    <Connector port="<%= scope.lookupvar('tomcat6::http_port') %>" protocol="HTTP/1.1"
                connectionTimeout="20000" 
                redirectPort="8443"
                maxHttpHeaderSize="131136"  /> 
