--- a/environments/cluster-demo/modules/localconfig/templates/slave-solrconfig.xml.erb
+++ b/environments/cluster-demo/modules/localconfig/templates/slave-solrconfig.xml.erb
@@ -37,7 +37,7 @@
   <!-- Used to specify an alternate directory to hold all index data
        other than the default ./data under the Solr home.
        If replication is in use, this should match the replication configuration. -->
-  <dataDir>${solr.data.dir:}</dataDir>
+  <dataDir><%= scope.lookupvar('solr::params::data') %>/CORENAME</dataDir>
 
 
   <!--  The DirectoryFactory to use for indexes.
