--- a/modules/rsmart-common/templates/vhost-80.conf.erb
+++ b/modules/rsmart-common/templates/vhost-80.conf.erb
@@ -9,6 +9,6 @@
   # Force all clients to SSL port (trusted)
   RewriteEngine on
   RewriteCond %{HTTPS} off
-  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=permanent,L]
+  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
 </VirtualHost>
